--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,6 +5,6 @@ sql:
     schema: "./db/migration/"
     gen:
       go:
-        package: "tutorial"
-        out: "tutorial"
+        package: "db"
+        out: "db/sqlc"
         sql_package: "pgx/v5"
